# agrep

./: CHANGELOG.md  README.md  agrep.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: agrep-0.1.0.0-inplace.conf  package.cache
src/Grep/: Core.hs
