cabal-version:      3.0
name:               agrep
version:            0.1.0.0
synopsis:           A grep implementation
-- description:
license:            MIT
license-file:       LICENSE
author:             Dimitrios Papakonstantinou
maintainer:         papadimitrios216@gmail.com
-- copyright:
category:           Text
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
                     ,Grep.Core
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , text
                    , directory
                    , filepath
    hs-source-dirs:   src
    default-language: GHC2021

executable agrep
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        agrep

    hs-source-dirs:   app
    default-language: GHC2021

test-suite agrep-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        agrep
